examples/test/testpolicy19109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19109
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key5: value10
      key10: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value4
          key46: value18
          key24: value47
      podSelector:
        matchLabels:
          key38: value5
          key21: value37
